--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    
  <p>قيد لبلتوث</p>
 <div class="header">
-    <p class="nouveaux" onclick="clearTous()">فريق جديد</p>
+    <p class="nouveaux" onclick="clearTous()"><span>فريق جديد</span></p>
     <p class="arier" onclick="arier()">تراجع</p>
 </div>
 <div class="moin">
@@ -45,3 +45,4 @@
 <script src="bilane.js"></script>
 </body>
 </html>
+
